spellcheck and content update

--- a/notebooks/3-ROOT-Macros.ipynb
+++ b/notebooks/3-ROOT-Macros.ipynb
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -184,9 +184,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let’s give a look to the obtained plot. Beautiful outcome for such a small bunch of lines, isn’t it ?\n",
+    "Let’s have a look at the obtained plot. Beautiful outcome for such a small bunch of lines, isn’t it ?\n",
     "\n",
-    "Your first plot with data points, a fit of an analytical function, a legend and some additional information in the form of graphics primitives and text. A well formatted plot, clear for the reader is crucial to communicate the relevance of your results to the reader."
+    "Your first plot containing data points, a fit of an analytical function, a legend and some additional information in the form of graphics primitives and text. A clear well formatted plot, is crucial to communicate the relevance of your results to the reader."
    ]
   },
   {
@@ -253,11 +253,11 @@
     "\n",
     "* **Point #1:** the name of the principal function (it plays the role of the “main” function in compiled programs) in the macro file. It has to be the same as the file name without extension.\n",
     "\n",
-    "* **Point #2:** instance of the TGraphErrors class. The constructor takes the number of points and the pointers to the arrays of x values, y values, x errors (in this case none, represented by the NULL pointer) and y errors. The second line defines in one shot the title of the graph and the titles of the two axes, separated by a “;”.\n",
+    "* **Point #2:** instance of the TGraphErrors class. The constructor takes the number of points and the pointers to the arrays of x values, y values, x errors (in this case none, represented by the NULL pointer) and y errors. The second line defines the title of the graph and the titles of the two axes, separated by a “;”.\n",
     "\n",
     "* **Point #3:** These three lines are rather intuitive right ? To understand better the enumerators for colours and styles see the reference for the TColor and TMarker classes.\n",
     "\n",
-    "* **Point #4:** the canvas object that will host the drawn objects. The “memory leak” is intentional, to make the object existing also out of the macro1 scope.\n",
+    "* **Point #4:** the canvas object that will host the drawn objects. The “memory leak” is intentional, to make the object exist also out of the macro1 scope.\n",
     "\n",
     "* **Point #5:** the method [DrawClone](https://root.cern.ch/doc/master/classTObject.html#a45d0875bf30660d0903a93d690ff9f7e) draws a clone of the object on the canvas. It has to be a clone, to survive after the scope of macro1, and be displayed on screen after the end of the macro execution. The string option “APE” stands for:\n",
     "\n",
@@ -273,7 +273,7 @@
     "\n",
     "* **Point #8:** fits the f function to the graph, observe that the pointer is passed. It is more interesting to look at the output on the screen to see the parameters values and other crucial information that we will learn to read at the end of this guide. The DrawClone comand tha follows draws the clone of the object on the canvas again. The “Same” option avoids the cancellation of the already drawn objects, in our case, the graph. The function f will be drawn using the same axis system defined by the previously drawn graph.\n",
     "\n",
-    "* **Point #9:** completes the plot with a legend, represented by a TLegend instance. The constructor takes as parameters the lower left and upper right corners coordinates with respect to the total size of the canvas, assumed to be 1, and the legend header string. You can add to the legend the objects, previously drawn or not drawn, through the addEntry method. Observe how the legend is drawn at the end: looks familiar now, right ?\n",
+    "* **Point #9:** completes the plot with a legend, represented by a TLegend instance. The constructor takes the lower left and upper right corners coordinates with respect to the total size of the canvas, assumed to be 1, and the legend header string, as parameters. You can add to the legend the objects, previously drawn or not drawn, through the addEntry method. Observe how the legend is drawn at the end: looks familiar now, right ?\n",
     "\n",
     "* **Point #10:** defines an arrow with a triangle on the right hand side, a thickness of 2 and draws it.\n",
     "\n",
@@ -291,7 +291,7 @@
     "\n",
     "### 3.3.2 Arrows and Lines\n",
     "\n",
-    "The macro line 55 shows how to define an arrow and draw it. The class representing arrows is ```TArrow```, which inherits from ```TLine```. The constructors of lines and arrows always contain the coordinates of the endpoints. Arrows also foresee parameters to [specify their](http://root.cern.ch/root/htmldoc/TArrow.html) shapes. Do not underestimate the role of lines and arrows in your plots. Since each plot should contain a message, it is convenient to stress it with additional graphics primitives.\n",
+    "The macro line 55 shows how to define an arrow and draw it. The class representing arrows is ```TArrow```, which inherits from ```TLine```. The constructors of lines and arrows always contain the coordinates of the endpoints. Arrows also foresee parameters to [specify their](http://root.cern.ch/root/htmldoc/TArrow.html) shapes. Do not underestimate the role of lines and arrows in your plots. Since each plot should contain a message, it is convenient to stress it with additional graphic primitives.\n",
     "\n",
     "### 3.3.3 Text\n",
     "\n",
