--- a/notebooks/6-Functions-and-Parameter-Estimation.ipynb
+++ b/notebooks/6-Functions-and-Parameter-Estimation.ipynb
@@ -6,9 +6,9 @@
    "source": [
     "# 6 Functions and Parameter Estimation\n",
     "## 6.1 Fitting Functions to Pseudo Data\n",
-    "In the example below, a pseudo-data set is produced and a model fitted to it.\n",
+    "In the example below, a pseudo-data set is produced and a model is fitted to it.\n",
     "\n",
-    "ROOT offers various minimisation algorithms to minimise a \\\\\\(\\\\chi\\^\\{2\\}\\\\\\) or a negative log-likelihood function. The default minimiser is MINUIT, a package originally implemented in the FORTRAN programming language. A C++ version is also available, MINUIT2, as well as Fumili (Silin 1983) an algorithm optimised for fitting. The minimisation algorithms can be selected using the static functions of the [```ROOT::Math::MinimizerOptions```](https://root.cern.ch/doc/v606/classROOT_1_1Math_1_1MinimizerOptions.html) class. Steering options for the minimiser, such as the convergence tolerance or the maximum number of function calls, can also be set using the methods of this class. All currently implemented minimisers are documented in the reference documentation of ROOT: have a look for example to the [```ROOT::Math::Minimizer```](https://root.cern.ch/doc/v606/classROOT_1_1Math_1_1Minimizer.html) class documentation. The complication level of the code below is intentionally a little higher than in the previous examples. \n",
+    "ROOT offers various minimisation algorithms to minimise a \\\\\\(\\\\chi\\^\\{2\\}\\\\\\) or a negative log-likelihood function. The default minimiser is MINUIT, a package originally implemented in the FORTRAN programming language. A C++ version is also available, MINUIT2, as well as Fumili (Silin 1983) an algorithm optimised for fitting. The minimisation algorithms can be selected using the static functions of the [```ROOT::Math::MinimizerOptions```](https://root.cern.ch/doc/v606/classROOT_1_1Math_1_1MinimizerOptions.html) class. Steering options for the minimiser, such as the convergence tolerance or the maximum number of function calls, can also be set using the methods of this class. All currently implemented minimisers are documented in the reference documentation of ROOT: have a look for example at the [```ROOT::Math::Minimizer```](https://root.cern.ch/doc/v606/classROOT_1_1Math_1_1Minimizer.html) class documentation. The complication level of the code below is intentionally a little higher than in the previous examples. \n",
     "\n",
     "Let’s go through the code, step by step to understand what is going on:\n",
     "\n",
@@ -308,9 +308,9 @@
     "## 6.2 Toy Monte Carlo Experiments\n",
     "Let us look at a simple example of a toy experiment comparing two methods to fit a function to a histogram, the \\\\\\(\\\\chi\\^\\{2\\}\\\\\\) method and a method called “binned log-likelihood fit”, both available in ROOT.\n",
     "\n",
-    "As a very simple yet powerful quantity to check the quality of the fit results, we construct for each pseudo-data set the so-called “pull”, the difference of the estimated and the true value of a parameter, normalized to the estimated error on the parameter, \\\\\\(\\\\frac\\{\\(p\\_\\{estim\\} \\- p\\_\\{true\\}\\)\\}\\{\\\\sigma\\_\\{p\\}\\}\\\\\\). If everything is OK, the distribution of the pull values is a standard normal distribution, i.e. a Gaussian distribution centred around zero with a standard deviation of one.\n",
+    "As a very simple yet powerful quantity to check the quality of the fit results, we construct for each pseudo-data set the so-called “pull”, the difference of the estimated and the true value of a parameter, normalized to the estimated error of the parameter, \\\\\\(\\\\frac\\{\\(p\\_\\{estim\\} \\- p\\_\\{true\\}\\)\\}\\{\\\\sigma\\_\\{p\\}\\}\\\\\\). If everything is OK, the distribution of the pull values is a standard normal distribution, i.e. a Gaussian distribution centred around zero with a standard deviation of one.\n",
     "\n",
-    "The macro performs a rather big number of toy experiments, where a histogram is repeatedly filled with Gaussian distributed numbers, representing the pseudo-data in this example. Each time, a fit is performed according to the selected method, and the pull is calculated and filled into a histogram. Here is the code:"
+    "The macro performs a rather big number of toy experiments, where a histogram is repeatedly filled with Gaussian distributed numbers, representing the pseudo-data in this example. Each time, a fit is performed according to the selected method, and the pull is calculated and put into a histogram. Here is the code:"
    ]
   },
   {
