--- a/notebooks/7-File-IO-and-Parallel-Analysis.ipynb
+++ b/notebooks/7-File-IO-and-Parallel-Analysis.ipynb
@@ -50,7 +50,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Not bad, eh ? Especially for a language that does not foresee persistency natively like C++. The RECREATE option forces ROOT to create a new file even if a file with the same name exists on disk.\n",
+    "Not bad, eh ? Especially for a language that does not natively foresee persistency like C++. The RECREATE option forces ROOT to create a new file even if a file with the same name exists on disk.\n",
     "\n",
     "Now, you may use the Cling command line to access information in the file and draw the previously written histogram:\n",
     "\n",
@@ -190,7 +190,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This data written to this example n-tuple represents, in the statistical sense, three independent variables (Potential or Voltage, Pressure and Temperature), and one variable (Current) which depends on the others according to very simple laws, and an additional Gaussian smearing. This set of variables mimics a measurement of an electrical resistance while varying pressure and temperature.\n",
+    "the data written to this example n-tuple represents, in the statistical sense, three independent variables (Potential or Voltage, Pressure and Temperature), and one variable (Current) which depends on the others according to very simple laws, and an additional Gaussian smearing. This set of variables mimics a measurement of an electrical resistance while varying pressure and temperature.\n",
     "\n",
     "Imagine your task now consists in finding the relations among the variables – of course without knowing the code used to generate them. You will see that the possibilities of the [```NTuple```](https://root.cern.ch/doc/v606/classTNtuple.html) class enable you to perform this analysis task. Open the ROOT file (```cond_data.root```) written by the macro above in an interactive session and use a [```TBrowser```](https://root.cern.ch/doc/master/classTBrowser.html) to interactively inspect it:\n",
     "\n",
@@ -198,7 +198,7 @@
     "root[0] TBrowser b\n",
     "```\n",
     "\n",
-    "You find the columns of your n-tuple written as leafs. Simply clicking on them you can obtain histograms of the variables!\n",
+    "You find the columns of your n-tuple written as leaves. Simply clicking on them you can obtain histograms of the variables!\n",
     "\n",
     "Next, try the following commands at the shell prompt and in the notebook enviroment or interactive ROOT shell, respectively:\n",
     "```\n",
@@ -381,7 +381,7 @@
     "\n",
     "### 7.2.2 Reading N-tuples\n",
     "\n",
-    "For completeness, you find here a small macro to read the data back from a ROOT n-tuple"
+    "For completeness, here you can find a small macro to read the data back from a ROOT n-tuple"
    ]
   },
   {
@@ -481,7 +481,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The [```Branch()```](https://root.cern.ch/doc/master/classTBranch.html) function requires a pointer to a variable and a definition of the variable type. The following table lists some of the possible values. Please note that ROOT is not checking the input and mistakes are likely to result in serious problems. This holds especially if values are read as another type than they have been written, e.g. when storing a variable as float and reading it as double.\n",
+    "The [```Branch()```](https://root.cern.ch/doc/master/classTBranch.html) function requires a pointer to a variable and a definition of the variable type. The following table lists some of the possible values. Please note that ROOT is not checking the input and mistakes are likely to result in serious problems. This holds the especially if values are read as another type than they have been written, e.g. when storing a variable as float and reading it as double.\n",
     "\n",
     "List of variable types that can be used to define the type of a branch in ROOT:\n",
     "\n",
@@ -551,9 +551,9 @@
    "source": [
     "### 7.2.5 For the advanced user: Processing trees with a selector script\n",
     "\n",
-    "Another very general and powerful way of processing a ```TChain``` is provided via the method ```TChain::Process()```. This method takes as arguments an instance of a – user-implemented– class of type ```TSelector```, and – optionally – the number of entries and the first entry to be processed. A template for the class ```TSelector``` is provided by the method ```TTree::MakeSelector```, as is shown in the little macro makeSelector.C below.\n",
+    "Another very general and powerful way of processing a ```TChain``` is provided via the method ```TChain::Process()```. This method takes an instance of a – user-implemented– class of type ```TSelector``` as an argument, and – optionally – the number of entries and the first entry to be processed. A template for the class ```TSelector``` is provided by the method ```TTree::MakeSelector```, as is shown in the little macro makeSelector.C below.\n",
     "\n",
-    "It opens the n-tuple ```conductivity_experiment.root``` from the example above and creates from it the header file ```MySelector.h``` and a template to insert your own analysis code, ```MySelector.C```.\n",
+    "It opens the n-tuple ```conductivity_experiment.root``` from the example above and creates from it the header file ```MySelector.h``` and a template to insert your own analysis code, ```MySelector.C``` from it.\n",
     "\n",
     "```\n",
     "{\n",
@@ -570,9 +570,9 @@
     "```\n",
     "\n",
     "\n",
-    "The template contains the entry points ```Begin()``` and ```SlaveBegin()``` called before processing of the TChain starts, Process() called for every entry of the chain, and ```SlaveTerminate()``` and ```Terminate()``` called after the last entry has been processed. Typically, initialization like booking of histograms is performed in ```SlaveBegin()```, the analysis, i.e. the selection of entries, calculations and filling of histograms, is done in ```Process()```, and final operations like plotting and storing of results happen in ```SlaveTerminate()``` or ```Terminate()```.\n",
+    "The template contains the entry points ```Begin()``` and ```SlaveBegin()``` called before processing of the TChain starts, Process() called for every entry of the chain, and ```SlaveTerminate()``` and ```Terminate()``` called after the last entry has been processed. Typically, initialisation like the booking of histograms is performed in ```SlaveBegin()```, the analysis, i.e. the selection of entries, calculations and filling of histograms, is done in ```Process()```, and final operations like plotting and storing of results happen in ```SlaveTerminate()``` or ```Terminate()```.\n",
     "\n",
-    "The entry points ```SlaveBegin()``` and ```SlaveTerminate()``` are called on so-called slave nodes only if parallel processing via PROOF or PROOF lite is enabled, as will be explained below.\n",
+    "The entry points ```SlaveBegin()``` and ```SlaveTerminate()``` are only called on so-called slave nodes if parallel processing via PROOF or PROOF lite is enabled, as will be explained below.\n",
     "\n",
     "A simple example of a selector class is shown in the macro MySelector.C. The example is executed with the following sequence of commands:\n",
     "\n",
@@ -717,7 +717,7 @@
     "    ch->SetProof();\n",
     "    ch->Process(\"MySelector.C+\");}\n",
     "\n",
-    "The first command, ```TProof::Open(const char*)``` starts a local PROOF server (if no arguments are specified, all cores will be used), and the command ```ch->SetProof();``` enables processing of the chain using PROOF. Now, when issuing the command ```ch->Process(\"MySelector.C+);```, the code in ```MySelector.C``` is compiled and executed on each slave node. The methods ```Begin()``` and ```Terminate()``` are executed on the master only. The list of n-tuple files is analysed, and portions of the data are assigned to the available slave processes. Histograms booked in SlaveBegin() exist in the processes on the slave nodes, and are filled accordingly. Upon termination, the PROOF master collects the histograms from the slaves and merges them. In ```Terminate()``` all merged histograms are available and can be inspected, analysed or stored. The histograms are handled via the instances fOutput of class TList in each slave process, and can be retrieved from this list after merging in Terminate.\n",
+    "The first command, ```TProof::Open(const char*)``` starts a local PROOF server (if no arguments are specified, all cores will be used), and the command ```ch->SetProof();``` enables processing of the chain using PROOF. Now, when issuing the command ```ch->Process(\"MySelector.C+);```, the code in ```MySelector.C``` is compiled and executed on each slave node. The methods ```Begin()``` and ```Terminate()``` are executed on the master only. The list of n-tuple files is analysed, and portions of the data are assigned to the available slave processes. Histograms booked in SlaveBegin() exist in the processes on the slave nodes, and are filled accordingly. Upon termination, the PROOF master collects the histograms from the slaves and merges them. In ```Terminate()``` all merged histograms are available and can be inspected, analysed or stored. The histograms are handled via the instances fOutput of class TList in each slave process, and can be retrieved from this list after merging in ```Terminate()```.\n",
     "\n",
     "To explore the power of this mechanism, generate some very large n-tuples using the script from the section Storing Arbitrary N-tuples - you could try 10 000 000 events (this results in a large n-tuple of about 160 MByte in size). You could also generate a large number of files and use wildcards to add the to the TChain. Now execute: ```> root -l RunMySelector.C``` and watch what happens:\n",
     "\n",
@@ -745,7 +745,7 @@
     "    Lite-0: all output objects have been merged\n",
     "\n",
     "\n",
-    "Log files of the whole processing chain are kept in the directory ```~.proof``` for each worker node. This is very helpful for debugging or if something goes wrong. As the method described here also works without using PROOF, the development work on an analysis script can be done in the standard way on a small subset of the data, and only for the full processing one would use parallelism via PROOF.\n",
+    "The log files of the whole processing chain are kept in the directory ```~.proof``` for each worker node. This is very helpful for debugging or if something goes wrong. As the method described here also works without using PROOF, the development work on an analysis script can be done in the standard way on a small subset of the data, and only for the full processing one would use parallelism via PROOF.\n",
     "\n",
     "It is worth to remind the reader that the speed of typical data analysis programs limited by the I/O speed (for example the latencies implied by reading data from a hard drive). It is therefore expected that this limitation cannot be eliminated with the usage of any parallel analysis toolkit.\n",
     "\n",
@@ -761,7 +761,7 @@
     "\n",
     "* You can select the branches to be covered by the caching algorithm with AddBranchToCache and deactivate unneeded branches with SetBranchStatus. This mechanism can result in a significant speed-up for simple operations on trees with many branches.\n",
     "\n",
-    "* You can measure the performance easily with TTreePerfStats. The ROOT documentation on this class also includes an introductory example. For example, TTreePerfStats can show you that it is beneficial to store meta data and payload data separately, i.e. write the meta data tree in a bulk to a file at the end of your job instead of writing both trees interleaved."
+    "* You can measure the performance easily with TTreePerfStats. The ROOT documentation on this class also includes an introductory example. For example, TTreePerfStats can show you that it is beneficial to store meta data and payload data separately, i.e. write the meta data tree in bulk to a file at the end of your job instead of writing both trees interleaved."
    ]
   },
   {
